# BALBOA_AE

./: .gitignore  .gitmodules  README.md
.claude/: .nfs0000000000031740000029b2  settings.local.json
experiments/aes_ctr/: README.md
experiments/aes_ctr/balboa_offload/hw/: CMakeLists.txt
experiments/aes_ctr/balboa_offload/hw/src/: init_ip.tcl  vfpga_top.svh
experiments/aes_ctr/balboa_offload/hw/src/hdl/: aes_top.vhd
experiments/aes_ctr/software_baseline/: Makefile  client.c  common.c  common.h  server.c
experiments/bandwidth_distribution/: README.md
experiments/bandwidth_distribution/sw/: CMakeLists.txt
experiments/bandwidth_distribution/sw/src/client_scaling/: main.cpp
experiments/bandwidth_distribution/sw/src/server_scaling/: main.cpp
experiments/ml_based_dpi/: README.md
experiments/ml_preprocessing/: README.md
experiments/ml_preprocessing/client_py/: CMakeLists.txt  example.py  example_CPU.py  example_single_thread.py
experiments/ml_preprocessing/client_py/src/: rdma_module.cpp
experiments/ml_preprocessing/hw/: CMakeLists.txt
experiments/ml_preprocessing/hw/src/: vfpga_top.svh
experiments/ml_preprocessing/hw/src/hls/ml_preprocessing/: ml_preprocessing.cpp  ml_preprocessing.hpp
experiments/ml_preprocessing/sw/: CMakeLists.txt
experiments/ml_preprocessing/sw/src/client/: main.cpp  main_rdma_gpu.cpp
experiments/ml_preprocessing/sw/src/server/: main_rdma_gpu.cpp
experiments/throughput_evaluation/: README.md
experiments/throughput_evaluation/commercial_rnic_sw/: RNIC_Comp_Poll_Tester.cpp  compilation_script.sh
experiments/throughput_evaluation/coyote_extension/: CMakeLists.txt
experiments/throughput_evaluation/coyote_extension/src/inactive_client/: main.cpp
experiments/throughput_evaluation/coyote_extension/src/include/: constants.hpp
